--- a/app/src/main/res/layout/room_user_input.xml
+++ b/app/src/main/res/layout/room_user_input.xml
@@ -81,6 +81,17 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
+        android:id="@+id/bt_datepicker"
+        android:text="Tanggal Jatuh Tempo"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textInputTanggalJatuhTempo"/>
+
+
+    <Button
         android:id="@+id/roomSaveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -88,6 +99,6 @@
         android:layout_marginEnd="8dp"
         android:text="SAVE"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputTanggalJatuhTempo"/>
+        app:layout_constraintTop_toBottomOf="@+id/bt_datepicker"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
